[tool.poetry]
name = "wiki"
version = "0.1.0"
description = ""
authors = ["Navaneeth Rao <decodestudios.help@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.4.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
